; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/win32/DriverLoading/Application/extr_main.c_Uninitialize.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/win32/DriverLoading/Application/extr_main.c_Uninitialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DRIVER_NAME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i32] [i32 91, i32 37, i32 108, i32 117, i32 93, i32 32, i32 70, i32 97, i32 105, i32 108, i32 101, i32 100, i32 32, i32 116, i32 111, i32 32, i32 117, i32 110, i32 114, i32 101, i32 103, i32 105, i32 115, i32 116, i32 101, i32 114, i32 32, i32 37, i32 115, i32 10, i32 0], align 4
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @Uninitialize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Uninitialize(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* @DRIVER_NAME, align 4
  %5 = call i32 @UnregisterDriver(i32 %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %12, label %7

7:                                                ; preds = %1
  %8 = call i32 (...) @GetLastError()
  %9 = load i32, i32* @DRIVER_NAME, align 4
  %10 = call i32 @wprintf(i8* bitcast ([31 x i32]* @.str to i8*), i32 %8, i32 %9)
  %11 = load i32, i32* @FALSE, align 4
  store i32 %11, i32* %2, align 4
  br label %14

12:                                               ; preds = %1
  %13 = load i32, i32* @TRUE, align 4
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %12, %7
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @UnregisterDriver(i32) #1

declare dso_local i32 @wprintf(i8*, i32, i32) #1

declare dso_local i32 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
